# WordVoice

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: release.yml
docs/superpowers/plans/: 2026-04-08-typr-dictation-app.md
docs/superpowers/specs/: 2026-04-08-typr-dictation-app-design.md
launch-video/: package-lock.json  package.json
launch-video/src/: Root.tsx  WordVoiceLaunch.tsx
src/: main.ts  overlay.html  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/binaries/: whisper-cpp-aarch64-apple-darwin
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: audio.rs  cleanup.rs  dictionary.rs  downloader.rs  history.rs  lib.rs  main.rs  paste.rs  recorder.rs  settings.rs  transcribe_groq.rs  transcribe_local.rs
