[package]
name = "wordvoice"
version = "0.1.0"
description = "WordVoice desktop dictation app"
authors = ["WordVoice"]
edition = "2021"

[lib]
name = "wordvoice_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
cpal = "0.15"
enigo = "0.2"
reqwest = { version = "0.12", features = ["multipart", "json", "stream"] }
hound = "3.5"
tokio = { version = "1", features = ["full"] }
dirs = "6"
arboard = "3"
futures-util = "0.3"
